# DH-dlc

./: .gitignore  CMakeLists.txt  Makefile  README.LANGUAGE.txt  README.OVERVIEW.txt  README.txt
DH-dlc/: CMakeLists.txt  LevelObject.cpp  LevelObject.hpp  LevelObjectData.cpp  LevelObjectData.hpp  LevelObjectMap.cpp  LevelObjectMap.hpp  LevelObjectName.cpp  LevelObjectName.hpp  LevelObjectPointer.cpp  LevelObjectPointer.hpp  LevelObjectType.cpp  LevelObjectType.hpp  LevelObject_add.cpp  LevelObject_encode.cpp  SourceScanner.cpp  SourceScanner.hpp  SourceStream.cpp  SourceStream.hpp  SourceToken.cpp  SourceToken.hpp  compound_objects.cpp  compound_objects.hpp  global_object.cpp  global_object.hpp  lo_types.cpp  lo_types.hpp  main.cpp  main.hpp  math.cpp  math.hpp  options.cpp  options.hpp  parsing.cpp  parsing.hpp  parsing_functions.cpp  parsing_unary.cpp  process_file.cpp  process_file.hpp  process_stream.cpp  (+7 more)
DH-dlc/LevelObject/: LevelObject.cpp  LevelObject.hpp  LevelObjectData.cpp  LevelObjectData.hpp  LevelObjectName.cpp  LevelObjectName.hpp  LevelObjectType.cpp  LevelObjectType.hpp  LevelObject_add.cpp  LevelObject_do.cpp  LevelObject_encode.cpp
DH-dlc/exceptions/: CompilerException.cpp  CompilerException.hpp  FunctionException.cpp  FunctionException.hpp  InvalidTypeException.cpp  NoSuchElementException.hpp  ParsingException.hpp  SyntaxException.cpp  UnknownCommandException.cpp
DH-dlc/parsing/: FunctionHandler.cpp  FunctionHandler.hpp  FunctionHandlerDDL.cpp  FunctionHandlerDDL.hpp  FunctionHandlerDHLX.cpp  FunctionHandlerNative.hpp  parsing.cpp  parsing.hpp  parsing_functions.cpp
DH-dlc/types/: binary.cpp  binary.hpp  int_t.cpp  int_t.hpp  real_t.cpp  real_t.hpp  string_t.cpp  string_t.hpp
DH-wad/: CMakeLists.txt  Lump.cpp  Lump.hpp  Makefile  main.cpp  main.hpp  options.cpp  options.hpp  process_directory.cpp  process_directory.hpp  process_file.cpp  process_file.hpp  process_map.cpp  process_map.hpp
common/: IO.cpp  IO.hpp  foreach.hpp  process_options.c  process_options.h  string_funcs.hpp
examples/: basic.ddl
inc/: AS_Doom.ddl  AS_Hexen.ddl  PolyDoorSlide.ddl  T_Heretic.ddl  T_Skulltag.ddl  T_Strife.ddl  VertexCircle.ddl  lib-udmf-zdoom.ddl  lib-udmf.ddl  lib-usdf-strict.ddl
map-libs/: AS_Doom.dhlu  AS_Hexen.dhlu  AS_ZDoom.ddl  AS_ZDoom.dhlu  Hall.ddl  HallAndZDoomDoor.ddl  HallAndZDoomPolyDoorSlide.ddl  PolyDoorSlide.ddl  T_Doom.ddl  T_Doom.dhlu  T_Heretic.dhlu  T_Hexen.ddl  T_Hexen.dhlu  T_Skulltag.dhlu  T_Strife.dhlu  T_ZDoom.ddl  T_ZDoom.dhlu  VertexCenter.ddl  VertexCircle.ddl  VertexOffset.ddl  ZDoomDoor.ddl  ZDoomPolyDoorSlide.ddl  lib-std.ddl  lib-udmf-strict.ddl  lib-udmf-zdoom.ddl  lib-udmf.ddl  lib-usdf-strict.ddl  lib-usdf.ddl  std-zdoom.ddl  std.ddl  udmf.ddl
src/: CMakeLists.txt  Counter.hpp  LevelObject.cpp  LevelObject.hpp  Makefile  SourceException.cpp  SourceException.hpp  SourcePosition.hpp  SourceScanner.cpp  SourceScanner.hpp  SourceStream.cpp  SourceStream.hpp  SourceToken.cpp  SourceToken.hpp  SourceTokenC.cpp  SourceTokenizerEDMF.cpp  SourceTokenizerEDMF.hpp  main.cpp  math.cpp  math.hpp  options.cpp  options.hpp  process_file.cpp  process_stream.cpp  process_token.cpp  process_token.hpp  scripts.hpp  types.hpp
src/LevelObject/: LevelObject.hpp  LevelObjectMap.cpp  LevelObjectMap.hpp  LevelObjectName.cpp  LevelObjectPointer.hpp  LevelObjectType.cpp  LevelObject_add.cpp  LevelObject_do.cpp  LevelObject_encode.cpp
src/exceptions/: InvalidTypeException.hpp  NoDefaultTypeException.cpp  NoDefaultTypeException.hpp  NoSuchElementException.cpp  ParsingException.cpp  SyntaxException.hpp  UnknownCommandException.hpp  UnknownFunctionException.cpp  UnknownFunctionException.hpp
src/parsing/: FunctionHandler.cpp  FunctionHandlerDDL.cpp  FunctionHandlerDHLX.hpp  FunctionHandlerNative.cpp  FunctionHandlerNative.hpp  parsing.cpp  parsing_functions.cpp
src/types/: int_t.cpp  real_t.cpp  string_t.cpp  string_t.hpp
